src/test/deca/context/valid/class/return_null_class.deca
// Description:
// Test valid return null
//
// [Begin Result]
// [End Result]
//
// History:
// cree le 07/01/2025

class A {
    A myMethod() {
        return null;
    }
}

{
    A a = new A();
    A b = a.myMethod();
}
