src/test/deca/context/invalid/operations/bool/invalid_bool_op_and_float_float.deca
// Description:
//    test invalid AND between float and float
//
// [Begin Result]
//invalid_bool_op_and_float_float.deca:12:20: Unsupported operation '&&' between types float and float. Operation '&&' supported only between booleans. (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    boolean a = 2.4 && 1.3;
}